creando la version 0.0.1

--- a/index.html
+++ b/index.html
@@ -3,15 +3,28 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption" rel="stylesheet">
     <title>Twitter</title>
   </head>
   <body>
     <header>
-      <div class="twitter.tw">
-        <h1>Twitter</h1>
+      <div class="twitter">
+        <h1 class="title">Twitter</h1>
+      </div>
+
+      <div class="box1">
+        <p><h3>Reto de codigo </h3>Hola,<br>soy frond-end developer jr. <hr id="hr"> <a>CÓDIGO<a></p>
+      </div>
+
+      <div class="box2">
+          <div>
+              <textarea type="text" name="insert-links" id="insert-links" placeholder="Agrega tu link"></textarea><br>
+              <button id="save" class="btn">Twett</button>
+            </div>
       </div>
 
     </header>
 
+    <script type="text/javascript" src="js/app.js"></script>    
   </body>
 </html>
