--- a/index.html
+++ b/index.html
@@ -7,24 +7,22 @@
     <title>Twitter</title>
   </head>
   <body>
-    <header>
+
       <div class="twitter">
         <h1 class="title">Twitter</h1>
       </div>
-
+      <div class="container">
       <div class="box1">
         <p><h3>Reto de codigo </h3>Hola,<br>soy frond-end developer jr. <hr id="hr"> <a>CÓDIGO<a></p>
       </div>
 
       <div class="box2">
-          <div>
-              <textarea type="text" name="insert-links" id="insert-links" placeholder="Agrega tu link"></textarea><br>
+          <div class="box-text">
+              <textarea class="question" type="text" name="insert-links" id="insert-links" placeholder="¿Qué estas pensando?"></textarea><br>
               <button id="save" class="btn">Twett</button>
             </div>
-      </div>
-
-    </header>
-
+     </div>
+     </div>
     <script type="text/javascript" src="js/app.js"></script>    
   </body>
 </html>
