--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
 
       <div class="box2">
           <div class="box-text">
-              <textarea class="question" type="text" name="insert-links" id="insert-links" placeholder="¿Qué estas pensando?"></textarea><br>
+              <textarea class="question" type="text" name="insert-tweets" id="insert-tweets" placeholder="¿Qué estas pensando?"></textarea><br>
+              <hr>
               <button id="save" class="btn">Twett</button>
+              <b id="counter">0</b>
             </div>
      </div>
+      <div id="container-tweets">
+        <div class="tweets"></div>
+        <div class="times"></div>
+      </div>
      </div>
     <script type="text/javascript" src="js/app.js"></script>    
   </body>
